# tec_api

./: Dockerfile  FastAPI.ipynb  asyncio_example.py  docker-compose.yaml  pyproject.toml  rest_api_ejemplos.ipynb
.github/workflows/: main.yml
api/: main.py
api_copy/: main.py
src/tec_api/: main.py
src/tec_api/authentication/: verify.py
src/tec_api/schemas/: __init__.py
src_copy/tec_api/: main.py
src_copy/tec_api/authentication/: __init__.py
tec_api/: authentication.py  main.py  schemas.py
tec_api/app/: main.py
tec_api/app/authentication/: __init__.py  verify.py
tec_api/app/schemas/: __init__.py  basic.py
tec_api_copy/: Dockerfile  main.py  schemas.py
tec_api_copy/app/: main.py
tec_api_copy/app/schemas/: __init__.py
